--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Panda</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt=""></a>
+              
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="w-50 p-1 input-group ms-5 me-5 search-bg bg-light text-dark">
+                  <input type="text" class="border border-light form-control bg-light text-dark" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+                  <button class="border border-light btn btn-outline-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                  </svg></button>
+              </div>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                  </li><li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">About us</a>
+                  </li><li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Contact us</a>
+                  </li>
+                  </ul>
+                </div>
+          </nav>
+    </header>
   </body>
 </html>
