--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       Dude is one of the best headphone brand in electronic world. If you want to save your ear from sound polution, you must use it.
                     </p>
                     <h2>$120</h2>
-                    <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                    <button type="button" class="btn btn-primary">BUY NOW <img class="text-white" src="images/arrow-right.svg" alt=""></button>
                   </div>
                   <div class="col-lg-5">
                     <img src="images/banner-images/headphone.png" alt="Los Angeles" class="d-block w-100">
@@ -112,19 +112,19 @@
         <h1 class="d-flex justify-content-start">Categories</h1>
         <div class="row gy-5">
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-warning rounded-4 d-flex align-items-center justify-content-around h-75">
+            <div class="border bg-warning rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
              <h1 class="text-white">Watch</h1>
              <img class="h-75" src="images/categories/watch.png" alt="">
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-danger rounded-4 d-flex align-items-center justify-content-around h-75">
+            <div class="border bg-danger rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
               <h1 class="text-white">Shoe</h1>
               <img class="h-75" src="images/categories/shoes.png" alt="">
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-primary rounded-4 d-flex align-items-center justify-content-around h-75">
+            <div class="border bg-primary rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
               <h1 class="text-white">Bag</h1>
               <img class="h-75" src="images/categories/bag.png" alt="">
             </div>
@@ -134,6 +134,119 @@
       </div>
     </section>
     <!-- Categories end  -->
-   </main>
+    <!-- Bags section starts -->
+    <section class="container bg-light">
+      <div class="d-flex justify-content-between p-2">
+        <div>
+          <h1>Shoes</h1>
+        </div>
+        <div>
+          <h3 class="text-warning">See all</h3>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Reebok Pump</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$1209</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Reebok All Terrain</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$639</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Reebok Dart Men’s Shoes</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$120</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-between p-2">
+        <div>
+          <h1>Backpack</h1>
+        </div>
+        <div>
+          <h3 class="text-warning">See all</h3>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Ison Backpack</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$1209</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Biaowang Backpack</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$639</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 mb-5 bg-body rounded-4 border-light">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h4 class="card-title">Dxyizu WS54 Smart</h4>
+              <p class="card-text">Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. </p>
+                <h4>$120</h4>
+                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Bags section end -->
+    <!-- subscribe starts  -->
+    <section style="height:350px;" class="container bg-danger bg-opacity-25 d-flex align-items-center justify-content-center rounded-4 shadow">
+      <div>
+          <h2>LET'S STAY IN TOUCH</h2>
+          <p>Get updates on sales specials and more</p>
+          <div class="input-group">
+          <input type="text" class="form-control" placeholder="Enter your email" aria-label="Enter your email" aria-describedby="button-addon2">
+          <button style="background-color:rgb(255, 36, 157) ;" class="btn btn-outline-secondary text-white" type="button" id="button-addon2">Send</button>
+          </div>
+      </div>
+    </section>
+<!-- subscribe starts  -->
+</main>
+<footer class="text-center mt-5">
+  <p>
+    @Stay cool@
+  </p>
+</footer>
   </body>
 </html>
