--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <header class="container mt-5">
-        <nav class="navbar navbar-expand-lg bg-white">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt=""></a>
@@ -26,11 +26,11 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                    <a class="nav-link active" aria-current="page" href="#shoes">Shoes</a>
                   </li><li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About us</a>
+                    <a class="nav-link active" aria-current="page" href="#backpack">Backpack</a>
                   </li><li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact us</a>
+                    <a class="nav-link active" aria-current="page" href="#contact-us">Contact us</a>
                   </li>
                   </ul>
                 </div>
@@ -135,7 +135,7 @@
     </section>
     <!-- Categories end  -->
     <!-- Bags section starts -->
-    <section class="container bg-light">
+    <section class="container bg-light" id="shoes">
       <div class="d-flex justify-content-between p-2">
         <div>
           <h1>Shoes</h1>
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-between p-2">
+      <div class="d-flex justify-content-between p-2" id="backpack">
         <div>
           <h1>Backpack</h1>
         </div>
@@ -231,7 +231,7 @@
     </section>
     <!-- Bags section end -->
     <!-- subscribe starts  -->
-    <section style="height:350px;" class="container bg-danger bg-opacity-25 d-flex align-items-center justify-content-center rounded-4 shadow">
+    <section style="height:350px;" class="container bg-danger bg-opacity-25 d-flex align-items-center justify-content-center rounded-4 shadow" id="contact-us">
       <div>
           <h2>LET'S STAY IN TOUCH</h2>
           <p>Get updates on sales specials and more</p>
