--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -16,7 +17,7 @@
               
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="w-50 p-1 input-group ms-5 me-5 search-bg bg-light text-dark">
-                  <input type="text" class="border border-light form-control bg-light text-dark" placeholder="Search" aria-label="Search" aria-describedby="button-addon2">
+                  <input type="text" class="panda-input form-control bg-light" placeholder="Search">
                   <button class="border border-light btn btn-outline-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                   </svg></button>
@@ -55,8 +56,8 @@
                     <p>
                       Dude is one of the best headphone brand in electronic world. If you want to save your ear from sound polution, you must use it.
                     </p>
-                    <h2>$120</h2>
-                    <button type="button" class="btn btn-primary">BUY NOW <img class="text-white" src="images/arrow-right.svg" alt=""></button>
+                    <h2 class="panda-price">$120</h2>
+                    <button type="button" class="btn-primary-panda">BUY NOW <img class="text-white" src="images/arrow-right.svg" alt=""></button>
                   </div>
                   <div class="col-lg-5">
                     <img src="images/banner-images/headphone.png" alt="Los Angeles" class="d-block w-100">
@@ -71,8 +72,8 @@
                       do amet sint. Velit officia consequat duis enim velit mollit. 
                       Exercitation veniam consequat sunt nostrud amet.
                     </p>
-                    <h2>$1289</h2>
-                    <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                    <h2 class="panda-price">$1289</h2>
+                    <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
                   </div>
                   <div class="col-lg-5">
                     <img src="images/banner-images/tv.png" alt="Los Angeles" class="d-block w-100">
@@ -84,8 +85,8 @@
                   <div class="col-lg-7">
                     <h1>Mind-blowing experience with Xbox controller</h1>
                     <p>If you desire realistic gaming experience and feelings you must use this awesome device to discover your mind highly fascinated</p>
-                    <h2>$399</h2>
-                    <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                    <h2 class="panda-price">$399</h2>
+                    <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
                   </div>
                   <div class="col-lg-5">
                     <img src="images/banner-images/xbox.png" alt="Los Angeles" class="d-block w-100">
@@ -112,21 +113,21 @@
         <h1 class="d-flex justify-content-start">Categories</h1>
         <div class="row gy-5">
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-warning rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
+            <div class="border bg-warning rounded-4 d-flex align-items-center justify-content-around panda-categortie shadow rounded-4">
              <h1 class="text-white">Watch</h1>
-             <img class="h-75" src="images/categories/watch.png" alt="">
+             <img class="panda-categorties" src="images/categories/watch.png" alt="">
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-danger rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
+            <div class="border bg-danger rounded-4 d-flex align-items-center justify-content-around panda-categortie shadow rounded-4">
               <h1 class="text-white">Shoe</h1>
-              <img class="h-75" src="images/categories/shoes.png" alt="">
+              <img class="panda-categorties" src="images/categories/shoes.png" alt="">
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="border bg-primary rounded-4 d-flex align-items-center justify-content-around h-75 shadow rounded-4">
+            <div class="border bg-primary rounded-4 d-flex align-items-center justify-content-around panda-categortie shadow rounded-4">
               <h1 class="text-white">Bag</h1>
-              <img class="h-75" src="images/categories/bag.png" alt="">
+              <img class="panda-categorties" src="images/categories/bag.png" alt="">
             </div>
           </div>
           </div>
@@ -153,7 +154,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$1209</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -165,7 +166,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$639</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -177,7 +178,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$120</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -199,7 +200,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$1209</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -211,7 +212,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$639</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -223,7 +224,7 @@
               <p class="card-text">Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint. </p>
                 <h4>$120</h4>
-                <button type="button" class="btn btn-primary">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
+                <button type="button" class="btn-primary-panda">BUY NOW <img src="images/arrow-right.svg" alt=""></button>
             </div>
           </div>
         </div>
@@ -236,8 +237,8 @@
           <h2>LET'S STAY IN TOUCH</h2>
           <p>Get updates on sales specials and more</p>
           <div class="input-group">
-          <input type="text" class="form-control" placeholder="Enter your email" aria-label="Enter your email" aria-describedby="button-addon2">
-          <button style="background-color:rgb(255, 36, 157) ;" class="btn btn-outline-secondary text-white" type="button" id="button-addon2">Send</button>
+          <input type="text" class="panda-input" placeholder="Enter your email" aria-label="Enter your email" aria-describedby="button-addon2">
+          <button class="text-white btn-primary-panda" type="button" id="button-addon2">Send</button>
           </div>
       </div>
     </section>
